[package]
name = "smartwallet-anchorproxy"
version = "0.2.0"
authors = ["jc"]
edition = "2018"
license = "Apache-2.0"
description = "shitty smart wallet for relatively safe degening"
repository = "https://github.com/johnjchang/smart_wallet"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8.0" } 
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
cw-storage-plus = { version = "0.8.0", features = ["iterator"]}
smartwallet = { path = "../../packages/smartwallet", default-features = false, version = "0.2.0"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
terraswap = { version = "2.4.0" }
terra-cosmwasm = { version = "2.2.0" }
thiserror = { version = "1.0.20" }
hex = "0.4"
cosmwasm-bignumber = "2.2.0"
cw20-base = { version = "0.8", features = ["library"] }
moneymarket = "0.3.0"
basset = { path = "../../packages/basset", default-features = false, version = "0.1.0"}
protobuf = { version = "2", features = ["with-bytes"] }

[dev-dependencies]
cosmwasm-schema = "0.16.0"